--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
         <button class="language-btn" data-language="kz">ҚЗ</button>
     </nav>
 
+    <!-- Scroll to Top Button -->
+    <button class="scroll-to-top-btn" id="scrollToTopBtn" aria-label="Scroll to top">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M7 14L12 9L17 14" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+    </button>
+
     <!-- Main Container -->
     <div class="container">
         
